assets/admin/css/admin.css
/* ... */
.eael-integration-content-wrapper.onboard-scroll-wrap {
    max-height: 350px;
    padding-bottom: 62px;
}

.eael-onboard-content {
    text-align: center;
    max-width: 728px;
    margin: 0 auto;
}

.eael-onboard-content-wrapper h3 {
    font-size: 22px;
    line-height: 1.2em;
    font-weight: 500;
    color: var(--text-color-25);
    margin-top: 16px;
    margin-bottom: 16px;
}

.eael-onboard-content-wrapper p {
    font-size: 16px;
    font-weight: 400;
    color: var(--text-color-100);
    line-height: 1.5em;
}

.eael-onboard-content-top p {
    max-width: 460px;
    margin: 0 auto;
    padding-bottom: 40px;
}

.eael-next-step-wrapper {
    border: 1px solid #F2F4F7;
    border-radius: 8px;
    padding: 24px;
    display: inline-block;
}

.eael-next-step-wrapper p {
    margin-bottom: 24px;
}

.collect-info {
    font-size: 14px;
    color: #667085;
    text-decoration: underline;
    cursor: pointer;
    padding-left: 4px;
}

.skip-item {
    font-size: 14px;
    color: #475467;
    display: block;
    margin-top: 12px;
    text-decoration: underline;
    cursor: pointer;
}

.peer:checked~.peer-checked {
    --tw-border-opacity: 1;
    border-color: rgb(20 122 255 / var(--tw-border-opacity));
}

.eael-onboard-content-select {
    display: flex;
    align-items: flex-start;
    gap: 16px;
    padding-bottom: 34px;
}

.eael-onboard-content-select .checkbox--label .select--wrapper {
    text-align: left;
    padding: 24px;
    border: 1px solid #F2F4F7;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    cursor: pointer;
}

.checkbox--label>input:checked+.select--wrapper {
    border-color: #750EF4;
}

/* Create a custom checkbox */
.select--wrapper .check-mark {
    height: 24px;
    aspect-ratio: 1;
    flex-shrink: 0;
    background-color: transparent;
    border: 1.5px solid #D0D5DD;
    border-radius: 50%;
    transition: ease-in-out .15s;
    margin-bottom: 16px;
    position: relative;
}

/* Create the check-mark/indicator (hidden when not checked) */
.select--wrapper .check-mark:after {
    content: "";
    position: absolute;
    left: 50%;
    top: 45%;
    width: 4px;
    height: 10px;
    border: solid #fff;
    border-width: 0 2px 2px 0;
    -webkit-transform: translateY(-50%) translateX(-50%) rotate(46deg);
    -ms-transform: translateY(-50%) translateX(-50%) rotate(46deg);
    transform: translateY(-50%) translateX(-50%) rotate(46deg);
    display: none;
}

/* When the checkbox is checked, add a blue background*/
.checkbox--label>input:checked+.select--wrapper .check-mark {
    background-color: #750EF4;
    border: 1.5px solid #750EF4;
}

/* When the checkbox is checked, add a blue background*/
.checkbox--label>input:checked+.select--wrapper .check-mark:after {
    display: block;
}

.eael-onboard-content-wrapper .eael-onboard-content-select h4 {
    font-size: 16px;
    font-weight: 500;
    line-height: 1.1em;
    color: #1D2939;
    margin-bottom: 8px;
}

.eael-onboard-content-select h4 span {
    color: #750EF4;
}

.eael-onboard-content-select p {
    font-size: 14px;
    line-height: 1.5em;
    color: #475467;
}

.eael-onboard-content-wrapper.eael-onboard-elements {
    padding: 40px;
    position: relative;
}

.eael-onboard-content-wrapper.eael-onboard-elements .eael-connect-others {
    padding: 0;
    background: transparent;
    border-radius: 0;
}

#eael-onboard--wrapper .eael-onboard-content-wrapper.eael-onboard-elements h3.eael-content-title {
    margin-top: 0px;
    margin-bottom: 0px;
}

.eael-onboard-content-wrapper .eael-features-content h2 {
    font-size: 22px;
    font-weight: 450;
    margin-bottom: 16px;
}

.eael-onboard-content-wrapper.eael-onboard-pro {
    padding: 40px;
}

.eael-onboard-content-wrapper.eael-onboard-pro .eael-connect-others {
    padding: 0;
    background: var(--base-background);
    border-radius: 0;
}

.eael-onboard--wrapper .eael-pro-features {
    border: 1px solid var(--border-color-base);
    background: linear-gradient(89.99deg, #FEFBFF 35.58%, #F4E4F6 99.99%);
    border-radius: 8px;
}

.eael-onboard--wrapper .eael-others-icon {
    font-size: 22px;
    width: 56px;
    height: 56px;
    margin-bottom: 0;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    border-radius: 8px;
}

.features-widget-wrapper {
    padding: 24px;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 8px;
}

.features-widget-item {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #fff;
    width: 50px;
    height: 50px;
    border-radius: 8px;
    cursor: pointer;
}

.features-widget-item a {
    position: relative;
}

.features-widget-item a:hover span.eael-tooltip {
    opacity: 1;
}

span.eael-tooltip {
    position: absolute;
    left: 50%;
    top: -40px;
    transform: translate(-50%);
    min-width: 175px;
    font-size: 12px;
    font-weight: 400;
    line-height: 1.2em;
    color: var(--text-color-25);
    font-family: "Rubik", sans-serif;
    text-align: center;
    padding: 8px 0;
    box-shadow: 0px 8px 16px -2px var(--shadow-color-12);
    background: var(--base-background);
    border-radius: 4px;
    opacity: 0;
}

span.eael-tooltip:after {
    content: '';
    position: absolute;
    top: 30px;
    left: 50%;
    transform: translate(-50%);
    border-top: 8px solid var(--base-background);
    border-right: 8px solid transparent;
    border-left: 8px solid transparent;
}

.features-widget-item span.eael-tooltip {
    position: absolute;
    left: 50%;
    top: -18px;
    min-width: 135px;
    transform: translate(-50%, -50%);
    font-size: 12px;
    font-weight: 400;
    line-height: 1.2em;
    color: var(--text-color-25);
    font-family: "Rubik", sans-serif;
    text-align: center;
    padding: 8px 0;
    box-shadow: 0px 8px 16px -2px var(--shadow-color-12);
    background: var(--base-background);
    border-radius: 4px;
    opacity: 0;
}
/* ... */

